Fixed alignment

--- a/css/main.css
+++ b/css/main.css
@@ -137,12 +137,12 @@ header {
 
 .profile-image {
   width: 250px;
-  padding-bottom: 100px;
+  padding-bottom: 130px;
 }
 
 .portfolio-site-image {
   width: 350px;
-  padding-bottom: 105px;
+  padding-bottom: 135px;
 }
 
 
